CoursExemple/expr2.output
Grammaire

    0 $accept: S $end

    1 S: S E '\n'
    2  | S '\n'
    3  | E '\n'
    4  | '\n'

    5 E: E '+' F
    6  | F

    7 F: F '*' T
    8  | T

    9 T: '(' E ')'
   10  | NUMBER


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    '\n' (10) 1 2 3 4
    '(' (40) 9
    ')' (41) 9
    '*' (42) 7
    '+' (43) 5
    error (256)
    NUMBER (258) 10


Non-terminaux, suivis des règles où ils apparaissent

    $accept (9)
        à gauche: 0
    S (10)
        à gauche: 1 2 3 4
        à droite: 0 1 2
    E (11)
        à gauche: 5 6
        à droite: 1 3 5 9
    F (12)
        à gauche: 7 8
        à droite: 5 6 7
    T (13)
        à gauche: 9 10
        à droite: 7 8


État 0

    0 $accept: • S $end

    NUMBER  décalage et aller à l'état 1
    '\n'    décalage et aller à l'état 2
    '('     décalage et aller à l'état 3

    S  aller à l'état 4
    E  aller à l'état 5
    F  aller à l'état 6
    T  aller à l'état 7


État 1

   10 T: NUMBER •

    $défaut  réduction par utilisation de la règle 10 (T)


État 2

    4 S: '\n' •

    $défaut  réduction par utilisation de la règle 4 (S)


État 3

    9 T: '(' • E ')'

    NUMBER  décalage et aller à l'état 1
    '('     décalage et aller à l'état 3

    E  aller à l'état 8
    F  aller à l'état 6
    T  aller à l'état 7


État 4

    0 $accept: S • $end
    1 S: S • E '\n'
    2  | S • '\n'

    $end    décalage et aller à l'état 9
    NUMBER  décalage et aller à l'état 1
    '\n'    décalage et aller à l'état 10
    '('     décalage et aller à l'état 3

    E  aller à l'état 11
    F  aller à l'état 6
    T  aller à l'état 7


État 5

    3 S: E • '\n'
    5 E: E • '+' F

    '\n'  décalage et aller à l'état 12
    '+'   décalage et aller à l'état 13


État 6

    6 E: F •
    7 F: F • '*' T

    '*'  décalage et aller à l'état 14

    $défaut  réduction par utilisation de la règle 6 (E)


État 7

    8 F: T •

    $défaut  réduction par utilisation de la règle 8 (F)


État 8

    5 E: E • '+' F
    9 T: '(' E • ')'

    '+'  décalage et aller à l'état 13
    ')'  décalage et aller à l'état 15


État 9

    0 $accept: S $end •

    $défaut  accepter


État 10

    2 S: S '\n' •

    $défaut  réduction par utilisation de la règle 2 (S)


État 11

    1 S: S E • '\n'
    5 E: E • '+' F

    '\n'  décalage et aller à l'état 16
    '+'   décalage et aller à l'état 13


État 12

    3 S: E '\n' •

    $défaut  réduction par utilisation de la règle 3 (S)


État 13

    5 E: E '+' • F

    NUMBER  décalage et aller à l'état 1
    '('     décalage et aller à l'état 3

    F  aller à l'état 17
    T  aller à l'état 7


État 14

    7 F: F '*' • T

    NUMBER  décalage et aller à l'état 1
    '('     décalage et aller à l'état 3

    T  aller à l'état 18


État 15

    9 T: '(' E ')' •

    $défaut  réduction par utilisation de la règle 9 (T)


État 16

    1 S: S E '\n' •

    $défaut  réduction par utilisation de la règle 1 (S)


État 17

    5 E: E '+' F •
    7 F: F • '*' T

    '*'  décalage et aller à l'état 14

    $défaut  réduction par utilisation de la règle 5 (E)


État 18

    7 F: F '*' T •

    $défaut  réduction par utilisation de la règle 7 (F)
